--- a/FirstPage.html
+++ b/FirstPage.html
@@ -21,7 +21,7 @@
   <i><p style="color:blue">"Your Security is Our Concern, Let's explore the Digital World Togehter"</i></p>
   <br>
   <br>
-  <a href="secondPage.html">Click here</a>
+  <a href="SecondPage.html">Click here</a>
   
 </body>
 </html>
