--- a/FourthPage.html
+++ b/FourthPage.html
@@ -32,8 +32,8 @@ Plot 28/30 Bombo Rd, Kampala, Uganda
 <br> 
 <label> Message </label> <textarea cols="20" rows ="5" name="text"></textarea>
 <br>
-<input type="Submit" name="Submit" value="Submit"><a href="index.html">Submit</a></input>
-<br>
+<input type="Submit" name="Submit" value="Submit"></input><br>
+<a href="index.html">Homepage here</a>
 
 </body>
 </html>
